--- a/port/vue/gojeju/index.html
+++ b/port/vue/gojeju/index.html
@@ -1,1 +1,15 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/port/vue/gojeju/favicon.ico"><title>gojeju</title><script defer="defer" src="/port/vue/gojeju/js/chunk-vendors.b132267b.js"></script><script defer="defer" src="/port/vue/gojeju/js/app.8b35484f.js"></script><link href="/port/vue/gojeju/css/app.78075e0b.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but gojeju doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=690cafe0559fae1b6885179a941d08f0"></script></body></html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>gojeju</title><script defer="defer" src="/js/chunk-vendors.cf184480.js"></script><script defer="defer" src="/js/app.b7ff0b90.js"></script><link href="/css/app.1fedd46a.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but gojeju doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=690cafe0559fae1b6885179a941d08f0"></script><script>setTimeout(function(){
+        
+        var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+        mapOption = { 
+            center: new kakao.maps.LatLng(33.36489602671088, 126.58970398197701), // 지도의 중심좌표
+            level: 9 // 지도의 확대 레벨
+        };
+        var map = new kakao.maps.Map(mapContainer, mapOption); 
+
+        var markerPosition  = new kakao.maps.LatLng(33.450701, 126.570667); 
+        var marker = {
+            position: markerPosition
+        };
+                
+      },800)</script></body></html>
