--- a/study/vue/index.html
+++ b/study/vue/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>제목</title>
+<title>공부목록</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
 <body>
@@ -9,7 +9,7 @@
    <ul>
        <li><a href="https://ssunakimm.github.io/study/vue/hd-card/index.html">hd-card</a></li>
        <li><a href="https://ssunakimm.github.io/study/vue/room/index.html">room</a></li>
-       <li><a href="https://ssunakimm.github.io/study/vue/todo/index.html">todo</a></li>
+       <li><a href="https://ssunakimm.github.io/study/vue/todo/index.html">todos</a></li>
    </ul> 
     
 
