--- a/cnt/main.html
+++ b/cnt/main.html
@@ -177,7 +177,7 @@
         <section class="main">
             <div class="visual">
                 <div class="title">Global Value Creating Company</div>
-                <div class="sub">サムスンC&amp;Tジャパンは、 様々な分野にて未来価値を作り、 グローバル価値を 創造する総合商社です。</div>
+                <div class="sub">サムスンC&amp;Tジャパンは、 <br />様々な分野にて未来価値を作り、 <br />グローバル価値を <br />創造する総合商社です。</div>
             </div>
             <div class="info">
                 <div class="title">トレーディングと環境に やさしい事業開発を通して 社会に寄与していきます。</div>
@@ -236,6 +236,83 @@
         </section>
     </div>
     <footer>
+        <div class="footer web">
+            <div class="footer_top">
+                <ul>
+                    <li class="depth1">
+                        <b>会社情報</b>
+                        <ul class="depth2">
+                            <li><a href="">会社概要     </a></li>
+                            <li><a href="">VISION</a></li>
+                            <li><a href="">企業理念</a></li>
+                            <li><a href="">社長メッセージ</a></li>
+                            <li><a href="">沿革 アクセス</a></li>
+                            <li><a href="">お問い合わせ</a></li>
+                        </ul>
+                    </li>
+                    <li class="depth1">
+                        <b>会社情報</b>
+                        <ul class="depth2">
+                            <li><a href="">会社概要     </a></li>
+                            <li><a href="">VISION</a></li>
+                            <li><a href="">企業理念</a></li>
+                            <li><a href="">社長メッセージ</a></li>
+                            <li><a href="">沿革 アクセス</a></li>
+                            <li><a href="">お問い合わせ</a></li>
+                        </ul>
+                    </li>
+                    <li class="depth1">
+                        <b>事業紹介</b>
+                        <ul class="depth2">
+                            <li><a href="">化学</a></li>
+                            <li><a href="">鉄鋼</a></li>
+                            <li><a href="">素材</a></li>
+                            <li><a href="">エネルギー</a></li>
+                        </ul>
+                    </li>
+                    <li class="depth1">
+                        <b>サステナビリティ</b>
+                        <ul class="depth2">
+                            <li><a href="">環境</a></li>
+                            <li><a href="">社会</a></li>
+                            <li><a href="">コンプライアンス</a></li>
+                        </ul>
+                    </li>
+                    <li class="depth1">
+                        <b>採用情報</b>
+                        <ul class="depth2">
+                            <li><a href="">キャリアガイド</a></li>
+                            <li><a href="">カルチャー</a></li>
+                            <li><a href="">採用プロセス</a></li>
+                            <li><a href="">Q&A</a></li>
+                        </ul>
+                    </li>
+                    <li class="depth1">
+                        <b>PR</b>
+                        <ul class="depth2">
+                            <li><a href="">ニュース  </a></li>
+                            <li><a href="">広報資料</a></li>
+                            <li><a href="">財務データ</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <div>
+                    <ul>
+                        <li><a href="">ニュース<div class="icon icon_link">link</div></a></li>
+                        <li><a href="">Global Network<div class="icon icon_link">link</div></a></li>
+                        <li><a href="">財務データ<div class="icon icon_link">link</div></a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="">Privacy Policy</a></li>
+                        <li><a href="">Legal Notice</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer_bottom">
+                <img src="">
+                <p class="copylight">Copyright (c) Samsung C&T Japan Corporation. All Rights Reserved.</p>
+            </div>
+        </div>
         <div class="footer mobile">
             <ul>
                 <li><a href="">ニュース<div class="icon icon_link">link</div></a></li>
@@ -249,6 +326,5 @@
             <p class="copylight">Copyright (c) Samsung C&T Japan Corporation. <br />All Rights Reserved.</p>
         </div>
     </footer>
-    
 </body>
 </html>
