--- a/cnt/main.html
+++ b/cnt/main.html
@@ -177,12 +177,13 @@
     <div class="contents">
         <section class="main">
             <div class="visual">
-                <div class="title">Global Value Creating Company</div>
+                <!--video src="/resources/img/main/main_movie.mp4" preload="auto" playsinline="" muted="" loop="" poster=""></video-->
+                <div class="title">Global Value <br />Creating <br />Company</div>
                 <div class="sub">サムスンC&amp;Tジャパンは、 <br />様々な分野にて未来価値を作り、 <br />グローバル価値を <br />創造する総合商社です。</div>
             </div>
             <div class="info">
-                <div class="title">トレーディングと環境に やさしい事業開発を通して 社会に寄与していきます。</div>
-                <div class="sub">グローバル市場にて、産業における専門性に基づき、市場の変化に対応し、付加価値を生み出すことで、顧客により良い価値を提供していきます。</div>
+                <div class="title">トレーディングと環境に <br />やさしい事業開発を通して <br />社会に寄与していきます。</div>
+                <div class="sub">グローバル市場にて、産業における専門性<br />に基づき、市場の変化に対応し、付加価値<br />を生み出すことで、顧客により良い価値を<br />提供していきます。</div>
                 <ul>
                     <li><div class="icon"><img src="resources/img/main/icon_info1.svg" alt="" title="" /></div>会社概要</li>
                     <li><div class="icon"><img src="resources/img/main/icon_info2.svg" alt="" title="" /></div>企業理念</li>
@@ -195,51 +196,57 @@
         <section class="company">
             <article>
                 <div class="title">事業紹介</div>
-                <div class="sub">サムスンC&amp;Tジャパンは、 未来の価値を創出するために、 化学、鉄鋼、素材、エネルギー事業分野を中心に顧客サービス‧提供機能の更なる向上に取り組んでいます。</div>
+                <div class="sub">サムスンC&amp;Tジャパンは、<br />未来の価値を創出するために、 <br />化学、鉄鋼、素材、エネルギー事業分野を<br />中心に顧客サービス‧提供機能の更なる向<br />上に取り組んでいます。</div>
             </article>
             <ul>
                 <li>
-                    <div class="img">
-                        <img src="/resources/img/main/img_company1.jpg" alt="" title="">
+                    <div class="img company1">
                         <span>chemical</span>
                     </div>
-                    <b>化学</b>
-                    <div>化学事業は、サムスン物産の インフラとグローバルネットワークを通じた 化学品全般のトレーディングにより、 お客様のニーズに応えながら付加価値の 高いソリューションを提供いたします。</div>
-                    <a href="">Learn more</a>
+                    <div class="text">
+                        <b class="title">化学</b>
+                        <div class="sub">化学事業は、サムスン物産の <br />インフラとグローバルネットワークを通じた <br />化学品全般のトレーディングにより、 <br />お客様のニーズに応えながら付加価値の <br />高いソリューションを提供いたします。</div>
+                        <a href="" class="btn_link">Learn more</a>
+                    </div>
                 </li>
                 <li>
-                    <div class="img">
-                        <img src="/resources/img/main/img_company2.jpg" alt="" title="">
-                        <span>chemical</span>
+                    <div class="img company2">
+                        <span>steel</span>
                     </div>
-                    <b>鉄鋼</b>
-                    <div>鉄鋼事業は、50年以上にわたる 鉄鋼トレーディングの 経験と長年培ったノウハウや業界知識を持ち、  30か国以上に及ぶ幅広い地域や分野で 事業を展開しています。</div>
-                    <a href=""></a>
+                    <div class="text">
+                        <b class="title">鉄鋼</b>
+                        <div class="sub">鉄鋼事業は、50年以上にわたる <br />鉄鋼トレーディングの <br />経験と長年培ったノウハウや業界知識を持ち、<br />30か国以上に及ぶ幅広い地域や分野で <br />事業を展開しています。</div>
+                        <a href="" class="btn_link">Learn more</a>
+                    </div>
+                    
                 </li>
                 <li>
-                    <div class="img">
-                        <img src="/resources/img/main/img_company3.jpg" alt="" title="">
-                        <span>chemical</span>
+                    <div class="img company3">
+                        <span>material</span>
                     </div>
-                    <b>素材</b>
-                    <div>素材事業は、高品質、高性能な技術優位性の 高い日本の電子部品・素材を サムスングループ及び協力会社様へ提供してい ます。また、サムスングループ以外の海外企業との取引及び韓国本社と連携した Re-Marketing / Recycle事業、半導体素材の 現地化事業など、幅広い事業を行っています。</div>
-                    <a href=""></a>
+                    <div class="text">
+                        <b class="title">素材</b>
+                        <div class="sub">素材事業は、高品質、高性能な技術優位性の <br />高い日本の電子部品・素材を <br />サムスングループ及び協力会社様へ提供してい <br />ます。また、サムスングループ以外の海外企業<br />との取引及び韓国本社と連携した <br />Re-Marketing / Recycle事業、半導体素材の <br />現地化事業など、幅広い事業を行っています。</div>
+                        <a href="" class="btn_link">Learn more</a>
+                    </div>
                 </li>
                 <li>
-                    <div class="img">
-                        <img src="/resources/img/main/img_company4.jpg" alt="" title="">
-                        <span>chemical</span>
+                    <div class="img company4">
+                        <span>energy</span>
                     </div>
-                    <b>エネルギー</b>
-                    <div>エネルギー事業は、未来に向けた持続可能な 社会の実現を目指し、再生可能エネルギーに 関わる事業に取り組んでいます。</div>
-                    <a href=""></a>
+                    
+                    <div class="text">
+                        <b class="title">エネルギー</b>
+                        <div class="sub">エネルギー事業は、未来に向けた持続可能な <br />社会の実現を目指し、再生可能エネルギーに <br />関わる事業に取り組んでいます。</div>
+                        <a href="" class="btn_link">Learn more</a>
+                    </div>
                 </li>
             </ul>
         </section>
         <section class="sustainability">
             <div class="title">サステナビリティ</div>
             <div class="sub">環境にやさしい経営を通して <br/>環境の影響を最小化し、 <br/>持続可能な成長を実現。</div>
-            <div class="btn"><a >詳細を見る</a></div>
+            <div class="btn"><a href="">詳細を見る</a></div>
         </section>
         <section class="recruiting">
             <dl>
