--- a/html/index.html
+++ b/html/index.html
@@ -542,7 +542,45 @@
                     <td></td>
                 </tr>
             </tbody>
-        </table>     
+        </table>   
+        
+        <table class="table">
+            <caption>퍼블리싱 페이지</caption>
+            <thead>
+                <tr>
+                    <th>1Depth</th>
+                    <th>2Depth</th>
+                    <th>3Depth</th>
+                    <th>페이지명</th>
+                    <th>링크</th>
+                    <th>퍼블리싱</th>
+                    <th>확인</th>
+                    <th>코멘트</th>
+            </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Utils</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td><a href="/html/utils/utils.html" target="_blank"> /html/utils/utils.html</a></td>
+                    <td><button class="b3"></button></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Color</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td><a href="/html/utils/color.html" target="_blank"> /html/utils/color.html</a></td>
+                    <td><button class="b3"></button></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table> 
 
         <!--table class="table">
             <caption>공통 UI</caption>
