--- a/html/main.html
+++ b/html/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="jp">
 <head>
-    <!--파비콘-->
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width" />
     <title>HOME - サムスンＣ＆Ｔジャパン</title>
