--- a/html/index.html
+++ b/html/index.html
@@ -47,28 +47,22 @@
             font-weight: bold;
         }
         .table thead tr th:nth-child(1) {
-            width: 8%;
+            width: 12%;
         }
         .table thead tr th:nth-child(2) {
             width: 15%;
         }
         .table thead tr th:nth-child(3) {
-            width: 11%;
+            width: auto;
         }
         .table thead tr th:nth-child(4) {
-            width: 15%;
+            width: 8%;
         }
         .table thead tr th:nth-child(5) {
-            width: 23%;
+            width: 8%;
         }
         .table thead tr th:nth-child(6) {
-            width: 7%;
-        }
-        .table thead tr th:nth-child(7) {
-            width: 7%;
-        }
-        .table thead tr th:nth-child(8) {
-            width: 14%;
+            width: 26%;
         }
 
         table tbody tr td:nth-child(1) {
@@ -107,8 +101,8 @@
         }
 
         button.b1{
-            background-color: #07a1ff;
-            color: #fff;
+            background-color: #b3e2ff;
+            color: #838383;
         }
 
         button.b1:before {
@@ -116,8 +110,8 @@
         }
 
         button.b2 {
-            background-color: #b3e2ff;
-            color: #838383;
+            background-color: #07a1ff;
+            color: #fff;
         }
 
         button.b2:before {
@@ -125,8 +119,8 @@
         }
         
         button.b3 {
-            background-color: #b3e2ff;
-            color: #838383;
+            background-color: #004098;
+            color: #fff;
         }
 
         button.b3:before {
@@ -152,8 +146,6 @@
                 <tr>
                     <th>1Depth</th>
                     <th>2Depth</th>
-                    <th>3Depth</th>
-                    <th>페이지명</th>
                     <th>링크</th>
                     <th>퍼블리싱</th>
                     <th>확인</th>
@@ -164,12 +156,10 @@
                 <tr>
                     <td>Home</td>
                     <td></td>
-                    <td></td>
-                    <td>삼성물산 법인 메인</td>
                     <td><a href="/html/main.html" target="_blank"> /html/main.html</a></td>
-                    <td><button class="b2"></button></td>
+                    <td><button class="b3"></button></td>
                     <td></td>
-                    <td>버튼링크들 제외 퍼블 완료</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>About Us</td>
@@ -178,366 +168,60 @@
                     <td></td>
                     <td></td>
                     <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>corporate-profile</td>
+                    <td><a href="/html/about-us/corporate-profile.html" target="_blank"> /html/about-us/corporate-profile.html</a></td>
+                    <td><button></button></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td>Corporate Profile</td>
-                    <td></td>
-                    <td>법인 기업 정보</td>
-                    <td></td>
-                    <td></td>
+                    <td>vision</td>
+                    <td><a href="/html/about-us/vision.html" target="_blank"> /html/about-us/vision.html</a></td>
+                    <td><button></button></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td>Message from the CEO</td>
-                    <td></td>
-                    <td>법인장 인사말</td>
-                    <td></td>
-                    <td></td>
+                    <td>our-philosophy</td>
+                    <td><a href="/html/about-us/our-philosophy.html" target="_blank"> /html/about-us/our-philosophy.html</a></td>
+                    <td><button></button></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td>Our Philosophy</td>
-                    <td></td>
-                    <td>법인 비전 정보</td>
-                    <td></td>
-                    <td></td>
+                    <td>ceo-message</td>
+                    <td><a href="/html/about-us/presidents-message.html" target="_blank"> /html/about-us/presidents-message.html</a></td>
+                    <td><button></button></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td>History</td>
-                    <td></td>
-                    <td>법인 연혁 정보</td>
-                    <td></td>
-                    <td></td>
+                    <td>history</td>
+                    <td><a href="/html/about-us/history.html" target="_blank"> /html/about-us/history.html</a></td>
+                    <td><button></button></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td>Office Locations</td>
-                    <td></td>
-                    <td>법인 사업장 정보(본사, 사업장)</td>
-                    <td></td>
-                    <td></td>
+                    <td>office locations</td>
+                    <td><a href="/html/about-us/office-locations.html" target="_blank"> /html/about-us/office-locations.html</a></td>
+                    <td><button></button></td>
                     <td></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td>Contact Us</td>
-                    <td></td>
-                    <td>법인 문의 등록 (일반문의, 사업문의)</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Business</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Chemicals</td>
-                    <td></td>
-                    <td>Chemicals 상세 정보</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Steel</td>
-                    <td></td>
-                    <td>Steel 상세 정보</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Electronic Materials</td>
-                    <td></td>
-                    <td>Materials 소재 상세 정보</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Energy</td>
-                    <td></td>
-                    <td>Energy 상세 정보</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>CSR</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>CSR Activities</td>
-                    <td></td>
-                    <td>법인 사회공헌활동 상세 정보</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>SCT CSR</td>
-                    <td></td>
-                    <td>삼성물산 본사 사회공헌활동 정보</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Careers</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Career Guide</td>
-                    <td></td>
-                    <td>법인 채용 안내 정보</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>What we look for</td>
-                    <td></td>
-                    <td>법인 인재상 정보</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Recruitment Procedure</td>
-                    <td>New Graduates</td>
-                    <td>채용 프로세스</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td>Experience Hire</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Q&amp;A</td>
-                    <td></td>
-                    <td>채용 문의 등록</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>PR</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>News</td>
-                    <td>News List</td>
-                    <td>News 목록 (법인, 본사)</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td>News Detail</td>
-                    <td>News 상세정보</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Corporate Media</td>
-                    <td></td>
-                    <td>법인 홍보영상, 미디어 정보</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td>Financial Information</td>
-                    <td></td>
-                    <td>삼성물산 본사 실적 정보</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Search</td>
-                    <td></td>
-                    <td></td>
-                    <td>검색 결과 정보</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Language</td>
-                    <td></td>
-                    <td></td>
-                    <td>언어 선택</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>SAMSUNG C&amp;T</td>
-                    <td></td>
-                    <td></td>
-                    <td>삼성물산 상사 사이트로 이동</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>GLOBAL NETWORK</td>
-                    <td></td>
-                    <td></td>
-                    <td>삼성물산 상사 Global Network 로 이동</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Japan Network</td>
-                    <td></td>
-                    <td></td>
-                    <td>지역 네트워크</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>PRIVACY POLICY</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>LEGAL NOTICE</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>NEWS</td>
-                    <td></td>
-                    <td></td>
-                    <td>삼성물산 상사 Media Center 로 이동</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>GLOBAL NETWORK</td>
-                    <td></td>
-                    <td></td>
-                    <td>삼성물산 상사 Global Network 로 이동</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>CSR</td>
-                    <td></td>
-                    <td></td>
-                    <td>삼성물산 상사 CSR 로 이동</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Financial Information</td>
-                    <td></td>
-                    <td></td>
-                    <td>삼성물산 본사 실적 정보</td>
-                    <td></td>
-                    <td></td>
+                    <td>contact us</td>
+                    <td><a href="/html/about-us/contact-info.html" target="_blank"> /html/about-us/contact-info.html</a></td>
+                    <td><button></button></td>
                     <td></td>
                     <td></td>
                 </tr>
@@ -550,8 +234,6 @@
                 <tr>
                     <th>1Depth</th>
                     <th>2Depth</th>
-                    <th>3Depth</th>
-                    <th>페이지명</th>
                     <th>링크</th>
                     <th>퍼블리싱</th>
                     <th>확인</th>
@@ -562,8 +244,6 @@
                 <tr>
                     <td>Utils</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
                     <td><a href="/html/utils/utils.html" target="_blank"> /html/utils/utils.html</a></td>
                     <td><button class="b3"></button></td>
                     <td></td>
@@ -571,8 +251,6 @@
                 </tr>
                 <tr>
                     <td>Color</td>
-                    <td></td>
-                    <td></td>
                     <td></td>
                     <td><a href="/html/utils/color.html" target="_blank"> /html/utils/color.html</a></td>
                     <td><button class="b3"></button></td>
