--- a/html/main.html
+++ b/html/main.html
@@ -25,9 +25,11 @@
     <meta name="twitter:card"			content="summary_large_image"/>
     <meta name="twitter:image"			content="https://cntjapan.xenoid.kr/resources/img/common/meta.jpg"/>
     <link rel="stylesheet" href="/resources/css/style.css"/>    
-    <link rel="stylesheet" href="/resources/css/aos.css"/>    
+    <link rel="stylesheet" href="/resources/css/aos.css"/>       
+    <link rel="stylesheet" href="/resources/css/slick.css"/>  
     <script src="/resources/js/jquery.min.js"></script>    
-    <script src="/resources/js/aos.js"></script>       
+    <script src="/resources/js/aos.js"></script>      
+    <script src="/resources/js/slick.js"></script>         
     <script src="/resources/js/include.js"></script>         
     <script src="/resources/js/common.js"></script>    
 
